resources/maildir/configwidget.cpp
@@ -108,6 +108,7 @@ bool ConfigWidget::save() const
     QString path = ui.kcfg_Path->url().isLocalFile() ? ui.kcfg_Path->url().toLocalFile() : ui.kcfg_Path->url().path();
     mSettings->setPath(path);
     mSettings->setTopLevelIsContainer(mToplevelIsContainer);
+    mSettings->save();
 
     if (ui.kcfg_Path->url().isLocalFile()) {
         QDir d(path);
